# auth-micro

./: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  build.rs  docker-compose.yaml
.github/workflows/: prod.yml
src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
