[package]
name = "auth-micro"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
pbkdf2 = { version = "0.13.0", features = ["simple"] }
prost = "0.14.3"
rand_core = { version = "0.10.1", features = ["std"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.14.6"
uuid = { version = "1.23.1", features = ["v4"] }

[build-dependencies]
tonic_build = "0.14.6"
