[package]
name = "auth-micro"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
tonic = "0.14.6"
prost = "0.14.3"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.23.1", features = ["v4"] }
pbkdf2 = "0.13.0"
rand_core = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
